--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node-env-run index.js"
+    "start": "node-env-run index.js",
+    "migration": "knex migrate:make --knexfile=./api/database/index.js"
   },
   "repository": {
     "type": "git",
